js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunction/lib1/l1.3.8.kt
inline fun foo() : Int {
    konst x: Any? = null
    return x!! as Int
}
